# gra

./: .gitignore  Cargo.toml  README.md  ideas.md  shell.nix
.github/workflows/: rust.yml
src/: assets.rs  game.rs  main.rs  menu.rs  settings.rs  splash.rs  t.rs  ui.rs  utils.rs
src/game/: components.rs  enemy.rs  events.rs  hud.rs  items.rs  pause.rs  player.rs  resources.rs  stages.rs  ui.rs
