[package]
name = "gra"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
debug = false

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Since there is no option to specify profile-specific dependency features, the dynamic_linking is specified here.
# Needs to be removed for prod builds.
[dependencies]
bevy = { version = "0.17", features = ["dynamic_linking"] }
