[package]
name = "gra"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
debug = false

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian2d = {version = "0.5.0" }
# Since there is no option to specify profile-specific dependency features, the dynamic_linking is specified here.
# Needs to be removed for prod builds.
bevy = { version = "0.18", default-features = false, features = ["2d", "dynamic_linking"] }
bevy-inspector-egui = {version = "0.36.0"}
